--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,46 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #f8f9fa;
+  --foreground: #343a40;
+  --primary: #6c757d;
+  --secondary: #e9ecef;
+  --accent: #adb5bd;
+  --pastel-blue: #d7e3fc;
+  --pastel-green: #d7e9d8;
+  --pastel-yellow: #fff3bf;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+.prose {
+  max-width: 65ch;
+  color: var(--foreground);
+}
+
+.quote-fade {
+  animation: fadeInOut 10s ease-in-out infinite;
+}
+
+@keyframes fadeInOut {
+  0%,
+  100% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  10%,
+  90% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
